# MAGICA

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  VISION.md  docker-build.sh  magda_config.txt  project_structure.md  tidy-test.json  tidy.json
.claude/: settings.local.json
.claude/skills/tracktion-engine/: SKILL.md
.github/workflows/: ci.yml
agents/: agent_interface.cpp  agent_interface.hpp  agent_manager.cpp  agent_manager.hpp  simple_agent.cpp  simple_agent.hpp
assets/: logo-design-prompt.txt  logo_connections
daw/: CMakeLists.txt  command.cpp  command.hpp  magica.cpp  magica.hpp  magica_daw_main.cpp
daw/core/: Config.cpp  Config.hpp
daw/engine/: daw_mode_interface_impl.hpp  tracktion_engine_wrapper.cpp  tracktion_engine_wrapper.hpp
daw/interfaces/: clip_interface.hpp  daw_mode_interface.hpp  mixer_interface.hpp  prompt_interface.hpp  track_interface.hpp  transport_interface.hpp
daw/ui/components/: ArrangementTimelineComponent.cpp  ArrangementTimelineComponent.hpp  SvgButton.cpp  SvgButton.hpp  TimelineComponent.cpp  TimelineComponent.hpp  TimelineFiller.cpp  TimelineFiller.hpp  TrackComponent.cpp  TrackComponent.hpp  TrackContentPanel.cpp  TrackContentPanel.hpp  TrackHeadersPanel.cpp  TrackHeadersPanel.hpp  ZoomManager.cpp  ZoomManager.hpp  mode_switcher.hpp
daw/ui/dialogs/: PreferencesDialog.cpp  PreferencesDialog.hpp
daw/ui/panels/: BottomPanel.cpp  BottomPanel.hpp  LeftPanel.cpp  LeftPanel.hpp  RightPanel.cpp  RightPanel.hpp  TimelineHeaderPanel.cpp  TimelineHeaderPanel.hpp  TransportPanel.cpp  TransportPanel.hpp
daw/ui/state/: TimelineController.cpp  TimelineEvents.hpp  TimelineState.hpp
daw/ui/themes/: DarkTheme.cpp  DarkTheme.hpp  FontManager.cpp  FontManager.hpp
daw/ui/views/: MainView.cpp  MainView.hpp  SessionView.cpp  SessionView.hpp  arrangement_view.hpp  performance_view.hpp
daw/ui/windows/: MainWindow.cpp  MainWindow.hpp  MenuManager.cpp  MenuManager.hpp
docs/: code_style.md  testing-guide.md
docs/architecture/: expandable-central-panel.md
include/magda/: magda.hpp
include/magda/core/: grpc_mcp_server.hpp
magda/daw/: CMakeLists.txt  magda_daw_main.cpp
magda/daw/audio/: AudioBridge.cpp  AudioBridge.hpp  DeviceProcessor.cpp  DeviceProcessor.hpp  MeteringBuffer.hpp  MidiBridge.cpp  MidiBridge.hpp  ParameterQueue.hpp  SimpleSynthPlugin.cpp  SimpleSynthPlugin.hpp
magda/daw/core/: AutomationInfo.hpp  AutomationManager.cpp  AutomationManager.hpp  AutomationTypes.hpp  ClipCommands.cpp  ClipInfo.hpp  ClipManager.cpp  ClipManager.hpp  ClipOperations.hpp  ClipTypes.hpp  Config.cpp  Config.hpp  DeviceInfo.hpp  LinkModeManager.cpp  LinkModeManager.hpp  MacroInfo.hpp  ModInfo.hpp  ModulatorEngine.cpp  ModulatorEngine.hpp  ParameterInfo.hpp  ParameterUtils.cpp  RackInfo.hpp  SelectionManager.cpp  SelectionManager.hpp  Subscription.hpp  TrackInfo.hpp  TrackManager.cpp  TrackManager.hpp  TrackTypes.hpp  TypeIds.hpp
magda/daw/engine/: AudioEngine.hpp  MagdaUIBehaviour.cpp  MagdaUIBehaviour.hpp  PlaybackPositionTimer.cpp  PluginScanCoordinator.cpp  PluginScanCoordinator.hpp  PluginScanner.cpp  PluginScanner.hpp  PluginWindowManager.cpp  PluginWindowManager.hpp  TracktionEngineWrapper.cpp  TracktionEngineWrapper.hpp  plugin_scanner_main.cpp
magica/agents/: CMakeLists.txt  agent_interface.cpp  agent_interface.hpp  agent_manager.cpp  agent_manager.hpp  simple_agent.cpp  simple_agent.hpp
magica/daw/: CMakeLists.txt  command.cpp  command.hpp  magica.cpp  magica.hpp  magica_daw_main.cpp
mcp/: CMakeLists.txt
mcp/agents/: orchestrator.py  utility_agent.go
mcp/proto/: magica_daw.proto
mcp/server/: grpc_mcp_server.cpp
proto/: mcp_service.proto
src/: CMakeLists.txt
src/core/: grpc_mcp_server.cpp
tests/: CMakeLists.txt  test_audio_clip_stretch.cpp  test_command.cpp  test_device_parameter_pagination.cpp  test_interfaces.cpp  test_midi_clip_sync.cpp  test_modulation.cpp  test_parameter_utils.cpp  test_plugin_loading.cpp  test_plugin_window_manager.cpp  test_zoom_simple.cpp
(+205 files in other folders)
